# data-validator

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
src/data_validation_check/: __init__.py  validator.py
tests/: test_validator.py
